<?xml version="1.0"?>
<package format="2">
  <name>jsk_image_capture</name>
  <version>2.2.11</version>
  <description>The jsk_image_capture package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>
  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
