<?xml version="1.0"?>
<package format="3">
  <name>jsk_tilt_laser</name>
  <version>2.2.11</version>
  <description>The jsk_tilt_laser package</description>

  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">YoheiKakiuchi</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/moge</url> -->
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">YoheiKakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>laser_assembler</build_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>laser_assembler</exec_depend>
  <build_depend>tf_conversions</build_depend>
  <exec_depend>tf_conversions</exec_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>laser_filters</build_depend>
  <exec_depend>laser_filters</exec_depend>
  <build_depend>multisense_lib</build_depend>
  <exec_depend>multisense_lib</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
