<package>
  <name>jsk_tools</name>
  <version>2.0.3</version>
  <description>Includes emacs scripts, ros tool alias generator, and launch doc generator.</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/jsk_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ryohei Ueda (ueda@jsk.t.u-tokyo.ac.jp)</author>
  <author>Rosen Diankov (rosen.diankov@gmail.com)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <run_depend>python-percol</run_depend>
  <run_depend>python-colorama</run_depend>
  <run_depend>python-pygithub3</run_depend>
  <run_depend>python-slacker-cli</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_reconfigure</run_depend>
  <run_depend>axis_camera</run_depend>
  <run_depend>pr2_computer_monitor</run_depend>
  <run_depend>jsk_network_tools</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosemacs-el</run_depend>
  <!-- <build_depend>mjpeg_server</build_depend> -->
  <!-- <run_depend>mjpeg_server</run_depend> -->
  <!-- <test_depend>mjpeg_server</test_depend> -->

</package>
