<package format="3">
  <name>jsk_tools</name>
  <version>2.2.11</version>
  <description>Includes emacs scripts, ros tool alias generator, and launch doc generator.</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/jsk_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ryohei Ueda (ueda@jsk.t.u-tokyo.ac.jp)</author>
  <author>Rosen Diankov (rosen.diankov@gmail.com)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-percol</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-colorama</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-colorama</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-github</exec_depend> <!-- python-pygithub3 (pip pygithub3) requres python3-github -->
  <exec_depend>python-pygithub3</exec_depend>
  <exec_depend>python-progressbar</exec_depend>
  <exec_depend>python-rosdep</exec_depend>
  <exec_depend>python-slacker-cli</exec_depend>
  <exec_depend>python-tabulate-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-texttable</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-texttable</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-requests</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <exec_depend>axis_camera</exec_depend>
  <exec_depend>pr2_computer_monitor</exec_depend>
  <exec_depend>iproute2</exec_depend>
  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>jsk_network_tools</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rosemacs</exec_depend>
  <!-- <build_depend>mjpeg_server</build_depend> -->
  <!-- <exec_depend>mjpeg_server</exec_depend> -->
  <!-- <test_depend>mjpeg_server</test_depend> -->
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

</package>
